# ffi_struct_trait

./: Cargo.toml  Readme.md
src/: lib.rs
